k3s/repo-post/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repo-post
  namespace: epitweet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: repo-post
  template:
    metadata:
      labels:
        app: repo-post
    spec:
      imagePullSecrets:
        - name: epitweet-pull-secret
      containers:
      - name: repo-post
        image: registry.cri.epita.fr/ing/majeures/tc/info/student/2026/2025-epitweet-tinyx-03/repo-post:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
