k3s/repo-post/service.yml
apiVersion: v1
kind: Service
metadata:
  name: repo-post
spec:
  selector:
    app: repo-post
  ports:
  - port: 8082
    targetPort: 8082
