k3s/repo-post/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repo-post-ingress
spec:
  rules:
  - host: post-service.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: repo-post
            port:
              number: 8082
